--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
-{
-  "sudo": "required",
-  "language": "java",
-  "os": "linux",
-  "script": [
-    "gradle build"
-  ]
-}
-
+sudo: required
+language: java
+os:
+- linux
+notifications:
+  email: true
+script:
+- gradle build
+before_install:
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo add-apt-repository -y ppa:cwchien/gradle ; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq update ; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get remove -y gradle ; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install -y gradle-ppa ; fi
