--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,6 @@ dependencies {
     compileOnly "${jme_group}:jme3-lwjgl:${jme_version}"
     compileOnly "${jme_group}:jme3-desktop:${jme_version}"   
       testCompile 'junit:junit:4.12' 
+      	compile "org.apache.logging.log4j:log4j-api:2.2"
+	compile "org.apache.logging.log4j:log4j-core:2.2"
 }
