--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,8 @@
-rootProject.name = 'DDSWriter'
+rootProject.name = 'dds_writer'
+include 'dds_format'
+include 'dds_writer'
+include 'dds_writer__s2tc_delegator'
+include 'dds_writer__s3tc_ati_lwjgl2_delegator'
+include 'dds_writer__cli'
+include 'viewer'
+include 'Tests'
