--- a/viewer/build.gradle
+++ b/viewer/build.gradle
@@ -3,6 +3,7 @@ dependencies {
 		compile project(':dds_writer__cli')
 		
 		compile "${jme_group}:jme3-desktop:${jme_version}"
+		compile "${jme_group}:jme3-lwjgl:${jme_version}"
 
 	    compile "org.apache.logging.log4j:log4j-api:2.2"
 		compile "org.apache.logging.log4j:log4j-core:2.2"
