--- a/dds_writer/build.gradle
+++ b/dds_writer/build.gradle
@@ -5,4 +5,6 @@ dependencies {
 	 testCompile 'junit:junit:4.12' 
 	 testCompile "${jme_group}:jme3-core:${jme_version}"
 	 
+	    compile "org.apache.logging.log4j:log4j-api:2.2"
+		compile "org.apache.logging.log4j:log4j-core:2.2"
 }
