--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 
 allprojects {
+	apply plugin: 'java'
+	sourceCompatibility = 1.7
+	targetCompatibility =  1.7
+	
 	project.version = "git describe --always --dirty".execute().text.trim()
 	println("version : '${project.version}'")
 	version="0.1"
@@ -9,13 +13,9 @@ allprojects {
 
 
 subprojects {
-	apply plugin: 'java'
 	apply plugin: 'maven'		
 	apply plugin: 'eclipse'
 	
-		
-	sourceCompatibility = JavaVersion.VERSION_1_7
-	targetCompatibility = JavaVersion.VERSION_1_7
 	[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 		
 	repositories {
