--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,20 @@ subprojects {
 	}	
 		
 	
-	
-	task sourcesJar(type: Jar) {
-		from sourceSets.main.allSource
+	task sourcesJar(type: Jar, dependsOn: classes) {
 		classifier = 'sources'
+		from sourceSets.main.allSource
+	}
+
+	task javadocJar(type: Jar, dependsOn: javadoc) {
+		classifier = 'javadoc'
+		from javadoc.destinationDir
+	}
+		
+		
+	artifacts {
+		archives sourcesJar
+		archives javadocJar
 	}
 
 	task writeNewPom << {
