Optimized memory usage, batch export and conversion, multi resolution export, new standalone executable for windows and linux.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,15 @@ os:
 - linux
 notifications:
   email: true
+env:
+  - LINUX=1
+  - WINDOWS=1
 script:
-- ./gradlew build
+- ./build.sh travis
+deploy:
+  provider: releases
+  api_key: ""
+  file: "build/libs/dist/*"
+  skip_cleanup: true 
+  on:
+    tags: true
