--- a/dds_writer__rgtc_lwjgl2_delegate/build.gradle
+++ b/dds_writer__rgtc_lwjgl2_delegate/build.gradle
@@ -17,15 +17,15 @@ dependencies {
 
 }
 
-task fatJar(type: Jar) {
-	manifest {
-        attributes  'Main-Class':  "ddswriter.cli.CLI109"
-    }
-    baseName = project.name + '-fat'
-    from { 
-		(configurations.runtime).collect { it.isDirectory() ? it : zipTree(it) }
-	}
-    with jar
-}
+// task fatJar(type: Jar) {
+// 	manifest {
+//         attributes  'Main-Class':  "ddswriter.cli.CLI109"
+//     }
+//     baseName = project.name + '-fat'
+//     from { 
+// 		(configurations.runtime).collect { it.isDirectory() ? it : zipTree(it) }
+// 	}
+//     with jar
+// }
 
-jar.finalizedBy(fatJar)
+// jar.finalizedBy(fatJar)
