Improve build script

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,2 @@
-jme_version =v3.1.0-alpha4
-jme_group =  com.github.jMonkeyEngine.jmonkeyengine
-	
+jme_version = frk-SNAPSHOT
+jme_group =  org.jmonkeyengine
