--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
-jme_version = frk-SNAPSHOT
-jme_group =  org.jmonkeyengine
+jme_version = rgtcf-SNAPSHOT
+jme_group =  com.github.riccardobl.jmonkeyengine
