--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
-jme_version = rgtcf-SNAPSHOT
-jme_group =  com.github.riccardobl.jmonkeyengine
+jme_version = -SNAPSHOT
+jme_group =  com.github.jMonkeyEngine.jmonkeyengine
