Migrate away from bintray

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
-jme_version = -SNAPSHOT
-jme_group =  com.github.jMonkeyEngine.jmonkeyengine
+jme_version = 3.3.2-stable
+jme_group =  org.jmonkeyengine
